; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/extr_main.c___wrap_malloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/extr_main.c___wrap_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kmalloc_ok = common dso_local global i32 0, align 4
@UM_KERN_PAGE_SIZE = common dso_local global i32 0, align 4
@UM_GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @__wrap_malloc(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @kmalloc_ok, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = call i8* @__real_malloc(i32 %8)
  store i8* %9, i8** %2, align 8
  br label %29

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @UM_KERN_PAGE_SIZE, align 4
  %13 = icmp sle i32 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @UM_GFP_KERNEL, align 4
  %17 = call i8* @uml_kmalloc(i32 %15, i32 %16)
  store i8* %17, i8** %4, align 8
  br label %21

18:                                               ; preds = %10
  %19 = load i32, i32* %3, align 4
  %20 = call i8* @vmalloc(i32 %19)
  store i8* %20, i8** %4, align 8
  br label %21

21:                                               ; preds = %18, %14
  br label %22

22:                                               ; preds = %21
  %23 = load i8*, i8** %4, align 8
  %24 = icmp eq i8* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %22
  %26 = load i32, i32* @ENOMEM, align 4
  store i32 %26, i32* @errno, align 4
  br label %27

27:                                               ; preds = %25, %22
  %28 = load i8*, i8** %4, align 8
  store i8* %28, i8** %2, align 8
  br label %29

29:                                               ; preds = %27, %7
  %30 = load i8*, i8** %2, align 8
  ret i8* %30
}

declare dso_local i8* @__real_malloc(i32) #1

declare dso_local i8* @uml_kmalloc(i32, i32) #1

declare dso_local i8* @vmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
